[tool.poetry]
name = "multialive"
version = "0.1.0"
description = ""
authors = ["iiTzArcur <zefanjaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
motor = "^3.6.0"
aiohttp = "^3.10.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
