[tool.poetry]
name = "multialive"
version = "0.1.0"
description = ""
authors = ["iiTzArcur <zefanjaj@gmail.com>"]
readme = "README.md"
packages = [{ include = "multialive" }]

[tool.poetry.dependencies]
python = "^3.12"
dnspython = "^2.7.0"
flask = "^3.0.3"
quart = "^0.19.6"
hypercorn = "^0.17.3"
motor = "^3.6.0"
aiohttp = "^3.10.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
